@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.45
+Release: 0.46
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -514,6 +514,9 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Fri Jul 12 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.46
+- display signature details using rpm -qi.
+
 * Thu Jul 11 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.45
 - placeholders for manifest constants for SuSE patch packages.
 - fix: repair 2ndary match criteria with rpmdb iterators.
